2008-07-09  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/src_sinc.c
    Remove use of llrint because sizeof (increment_t) is guaranteed not to be 8.

2008-07-02  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/downsample_test.c
    New test file to test for buffer overrun bugs at extreme low conversion
    ratios.

    * tests/Makefile.am
    Hook above test program into build.

    * src/src_sinc.c
    Fix buffer overrrun bug at extreme low conversion ratios. Thanks to Russell
    O'Connor for the report.

    * configure.ac NEWS README doc/*.html
    Update for 0.1.4 release.

2008-05-13  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac
    Make use of libsndfile optional. Patch from Samuli Suominen.

2008-04-26  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * Win32/libsamplerate-0.def
    Add src_int_to_float/float_to_int_array to exports.

    * examples/sndfile-resample.c
    Add printing of libsndfile version, modify libsamplerate version.

2008-03-23  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * doc/*.html
    Final documentation tweaks for release.

2008-03-17  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/throughput_test.c
    Include config.h and float_cast.h." -- tests/throughput_test.c

    * Make.bat Win32/*
    Bunch more Win32 updates.

2008-03-15  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/* tests/*
    Remove all traces of old SRC_OLD_SINC_* converters.

    * Make.bat Win32/*
    Preliminary Win32 updates.

    * configure.ac
    Bump version to 0.1.3.

2008-03-11  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * doc/api_simple.html
    Try once again to convince people that src_simple cannot be used on small
    chunks of a larger piece of audio.

2008-03-08  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/snr_bw_test.c
    Remove bodgy old throughput calculations.
